# JPGtoSVG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  convert.cpp
base64/: test.cpp
